test/Parser/Struct/UnterminatedStructMemberList.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:8:1: error: expected 'RCURLYBRACKET'; got 'END'
struct TestStruct {

// CHECK: 1 error generated.
